--- a/exploratory_analysis.ipynb
+++ b/exploratory_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,15 +69,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "challengify"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Benzersiz Sipariş (Orders): 99441\n",
+      "Benzersiz Yorum (Reviews): 98410\n",
+      "Benzersiz Satıcı (Sellers): 3095\n",
+      "Benzersiz Ürün (Products): 32951\n",
+      "Benzersiz Müşteri (Customers): 99441\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "print(\"Benzersiz Sipariş (Orders):\", data['orders']['order_id'].nunique())\n",
+    "print(\"Benzersiz Yorum (Reviews):\", data['order_reviews']['review_id'].nunique())\n",
+    "print(\"Benzersiz Satıcı (Sellers):\", data['sellers']['seller_id'].nunique())\n",
+    "print(\"Benzersiz Ürün (Products):\", data['products']['product_id'].nunique())\n",
+    "print(\"Benzersiz Müşteri (Customers):\", data['customers']['customer_id'].nunique())"
    ]
   },
   {
@@ -99,15 +115,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "challengify"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Toplam verilen sipariş sayısı: 99441\n",
+      "Yorum yapılan sipariş sayısı: 98673\n",
+      "Aradaki fark (Yorumsuz siparişler): 768\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "total_orders = data['orders']['order_id'].nunique()\n",
+    "reviewed_orders = data['order_reviews']['order_id'].nunique()\n",
+    "\n",
+    "print(f\"Toplam verilen sipariş sayısı: {total_orders}\")\n",
+    "print(f\"Yorum yapılan sipariş sayısı: {reviewed_orders}\")\n",
+    "print(f\"Aradaki fark (Yorumsuz siparişler): {total_orders - reviewed_orders}\")"
    ]
   },
   {
@@ -128,22 +159,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "challengify"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "768"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# Sipariş ID'lerini küme (set) haline getirip farklarını alıyoruz\n",
+    "orders_set = set(data['orders']['order_id'])\n",
+    "reviews_set = set(data['order_reviews']['order_id'])\n",
+    "\n",
+    "# Yorumsuz siparişlerin sayısını değişkene atıyoruz\n",
+    "n_missing_reviews = len(orders_set - reviews_set)\n",
+    "n_missing_reviews"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform linux -- Python 3.12.9, pytest-8.3.4, pluggy-1.5.0 -- /home/cevdetkopuz/.pyenv/versions/3.12.9/envs/workintech/bin/python\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /home/cevdetkopuz/workintech/sprint-15/01-Statistical-Inference/data-exploratory-analysis/tests\n",
+      "plugins: typeguard-4.4.2, anyio-4.8.0\n",
+      "\u001b[1mcollecting ... \u001b[0mcollected 1 item\n",
+      "\n",
+      "test_exploratory.py::TestExploratory::test_n_missing_reviews \u001b[32mPASSED\u001b[0m\u001b[32m      [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.02s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+      "\n",
+      "\n",
+      "💯 You can commit your code:\n",
+      "\n",
+      "\u001b[1;32mgit\u001b[39m add tests/exploratory.pickle\n",
+      "\n",
+      "\u001b[32mgit\u001b[39m commit -m \u001b[33m'Completed exploratory step'\u001b[39m\n",
+      "\n",
+      "\u001b[32mgit\u001b[39m push origin master\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from nbresult import ChallengeResult\n",
     "\n",
@@ -157,9 +233,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "workintech",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
