Completed exploratory step

--- a/exploratory_analysis.ipynb
+++ b/exploratory_analysis.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "tags": [
      "challengify"
@@ -172,24 +172,19 @@
        "768"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Sipariş ID'lerini küme (set) haline getirip farklarını alıyoruz\n",
-    "orders_set = set(data['orders']['order_id'])\n",
-    "reviews_set = set(data['order_reviews']['order_id'])\n",
-    "\n",
-    "# Yorumsuz siparişlerin sayısını değişkene atıyoruz\n",
-    "n_missing_reviews = len(orders_set - reviews_set)\n",
+    "n_missing_reviews = total_orders - reviewed_orders\n",
     "n_missing_reviews"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +201,7 @@
       "\n",
       "test_exploratory.py::TestExploratory::test_n_missing_reviews \u001b[32mPASSED\u001b[0m\u001b[32m      [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.02s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.01s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
       "\n",
       "\n",
       "💯 You can commit your code:\n",
